--- a/sample bello/sample_bello.html
+++ b/sample bello/sample_bello.html
@@ -51,8 +51,8 @@
   <p>Introduction to cybersecurity</p>
   <p>Redcross youth</p>
   <p>CAT Merit</p>
-  <img src="linux.png" alt="Linux cert" style="width:600px" align="center">
-  <img src="cybersec.png" alt="cybersec-cert" style="width:600px" align="left"><br>
+  <img src="linux.png" alt="Linux cert" style="width:600px" >
+  <img src="cybersec.png" alt="cybersec-cert" style="width:600px"><br>
   <a href="#home">back</a><br />
   <br>
   <br>
