coding through vscode
putting it into the vscode

--- a/sample bello/page2.html
+++ b/sample bello/page2.html
@@ -3,7 +3,7 @@
 	page 2
 </title>
 <body style="background-image: url('future.png');background-repeat: no-repeat;background-attachment:fixed;background-size:cover">
-	<button onclick="document.location='sample_bello.html'" align="right">back page</button>
+	<button type="button" onclick="document.location='sample_bello.html'" align="right">back page</button>
 	<center>
 	<h1>My SlamBook</h1>
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Favorite color</h1>
@@ -15,6 +15,9 @@
 	<p> fried chicken </p>
 	<p> pizza </p>
 	<p> tocino</p>
+	<p> roasted chicken</p>
+	<p> spicy chicken</p>
+	<p> chicken and pork asado</p>
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I am scared of</h1>
 	<p> Dissapointment</p>
 	<p> cockroach </p>
