--- a/sample bello/sample_bello.html
+++ b/sample bello/sample_bello.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <a id="home"></a>
-<h1><center>Information About Me</center></h1>
+<h1><center>Curiculum Vitae</center></h1>
 <img src="pfp.JPG" alt="pfp" style="float:right;border-radius:100%;width:200px;padding-right:px"><br>
 
 </head>
@@ -13,7 +13,7 @@
   <a href="#Hobbies">Hobbies</a><br />
   <a href="#certificates">Certificates</a><br />
   <a href="#skills">Skills</a><br />
-  <button onclick="document.location='page2.html'" style="button-align:right">next page</button><br>
+  <button type ="button"onclick="document.location='page2.html'" style="button-align:right">next page</button><br>
   <br>
 
   <a id="ABOUTME"><h1 style ="color:white;background-color:black">ABOUT ME</h1></a>
@@ -36,8 +36,8 @@
   <p>STI Caloocan</p>
   <p>Our Lady Of fatima University</p>
   <a href="#home">back</a><br />
-  <br />
-  <br />
+  <br>
+  <br>
   <a id="Hobbies"><h1 style ="color:white;background-color:black">HOBBIES</h1></p>
   <p>Playing video games</p>
   <p>linux configuration</p>
@@ -63,7 +63,7 @@
   <p>Server management</p>
   <p>computer troubleshooting</p>
   <a href="#home">back</a><br><br>
-  <button onclick="document.location='page2.html'" style="text-align:right">next</button>
+  <button type="button" onclick="document.location='page2.html'" style="text-align:right">next</button>
 </body>
 <footer>
 <p><i><center>©wesley 2023</center></i></p>
