--- a/sample bello/page2.html
+++ b/sample bello/page2.html
@@ -37,6 +37,19 @@
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Advice in life</h1>
 	<p> stay true to yourself </p>
 	<p> do what you love not what you're told to love </p>
+	<br>
+	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Quotes in life</h1>
+	<p> nothing is true everything is permitted</p>
+	<p> we work in the dark to serve th light</p>
+	<p> you can't win in life if you are losing in your mind</p>
+	<p> if it scares you it's a sign that you should do it</p>
+	<p> patience is when you're supposed to be mad, but you choose to understand</p>
+	<p> if you want to make everyone happy, don't be a leader- sell ice cream</p>
+	<p> you can't win in life if you are lsoing in your mind</p>
+	<p> teh fact that you aren't where you want to be should be enough motivation</p>
+	<p> hard time will always reveal true friends</p>
+	<p> better to fight for something than lvie for nothing</p>
+	<p> take risk: if you win, you will be happy; if you lose, you will be wise</p>
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Describe yourself in three words</h1>
 	<p> enthusiastic </p>
 	<p> passionate </p>
