--- a/sample bello/page2.html
+++ b/sample bello/page2.html
@@ -10,6 +10,21 @@
 	<p> my favorite color is color blue</p>
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I am confident of </h1>
 	<p> linux configuration and trouble shooting </p>
+	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Places that I have been drived </h1>
+	<p> donya remedios trinidad</p>
+	<p> malolos</p>
+	<p> calumpit</p>
+	<p> san fernando pampangga</p>
+	<p> makati</p>
+	<p> manila</p>
+	<p> laguna</p>
+	<p> pasay</p>
+	<p> san miguel</p>
+	<p> valenzuela</p>
+	<p> marilao</p>
+	<p> obando</p>
+	<p> bocaue </p>
+	
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Favorite food and dish</h1>
 	<p> adobo</p>
 	<p> fried chicken </p>
