--- a/sample bello/page2.html
+++ b/sample bello/page2.html
@@ -7,8 +7,18 @@
 	<center>
 	<h1>My SlamBook</h1>
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Favorite color</h1>
-	<p> my favorite color is color blue</p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I am confident of </h1>
+	<p> my favorite color is color blue</p>	
+	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I want to try but never to do it</h1>
+	<p> archery</p>
+	<p> mountain climbing</p>
+	<p> paragliding</p>
+	<p> cliff jumping</p>
+	<p> bunjee jumping</p>
+	<p> sky diving</p>
+	<p> gun shooting</p>
+	<p> apply for marksmanship training</p>
+	<p> apply for marine</p>
+	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I am confident of</h1>
 	<p> linux configuration and trouble shooting </p>
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Places that I have been drived </h1>
 	<p> donya remedios trinidad</p>
@@ -24,7 +34,7 @@
 	<p> marilao</p>
 	<p> obando</p>
 	<p> bocaue </p>
-	
+
 	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Favorite food and dish</h1>
 	<p> adobo</p>
 	<p> fried chicken </p>
