--- a/sample bello/sample_bello.html
+++ b/sample bello/sample_bello.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <a id="home"></a>
 <h1><center>Curiculum Vitae</center></h1>
-<img src="pfp.JPG" alt="pfp" style="float:right;border-radius:100%;width:200px;padding-right:px"><br>
-
 </head>
 <body style ="background-image: url('future.png');background-repeat: no-repeat;background-attachment:fixed;background-size:cover">
 
@@ -13,17 +11,19 @@
   <a href="#Hobbies">Hobbies</a><br />
   <a href="#certificates">Certificates</a><br />
   <a href="#skills">Skills</a><br />
-  <button type ="button"onclick="document.location='page2.html'" style="button-align:right">next page</button><br>
+  <button type ="button"onclick ="document.location='page2.html'" style="button-align:right">next page</button><br>
   <br>
 
   <a id="ABOUTME"><h1 style ="color:white;background-color:black">ABOUT ME</h1></a>
+  <img src="pfp.JPG" alt="pfp" style="float:right;border-radius:100%;width:200px;padding-right:px"><br>
+  
   <p>NAME: Dan Wesley Bello</p>
   <p>BIRTHDAY: June 23 2003</p>
   <p>AGE: 19</p>
   <p>ADDRESS: San Pascual Obando Bulacan</p>
-    <a href="#home">back</a><br />
-  <br />
-  <br />
+    <a href="#home">back</a><br>
+  <br>
+  <br>
   <a id="education"><h1 style ="color:white;background-color:black">EDUCATIONAL BACKGROUND</h1></a>
   <h3>Elementary: </h3>
   <p>Colegio de San Pascaul Baylon</p>
@@ -38,14 +38,14 @@
   <a href="#home">back</a><br />
   <br>
   <br>
-  <a id="Hobbies"><h1 style ="color:white;background-color:black">HOBBIES</h1></p>
+  <a id="Hobbies"><h1 style ="color:white;background-color:black">HOBBIES</h1></a>
   <p>Playing video games</p>
   <p>linux configuration</p>
   <p>watching anime</p>
   <p>playing sportsgame</p>
-  <a href="#home">back</a><br />
-  <br />
-  <br />
+  <a href="#home">back</a><br>
+  <br>
+  <br>
   <a id="certificates"><h1 style ="color:white;background-color:black">CERTIFICATES AND TRAINING</h1></a>
   <p>Introduction to linux</p>
   <p>Introduction to cybersecurity</p>
@@ -53,7 +53,8 @@
   <p>CAT Merit</p>
   <img src="linux.png" alt="Linux cert" style="width:600px" >
   <img src="cybersec.png" alt="cybersec-cert" style="width:600px"><br>
-  <a href="#home">back</a><br />
+  <a href="#home">back</a>
+  <br>
   <br>
   <br>
   <a id="skills"><h1 style ="color:white;background-color:black">Skills</h1></a>
@@ -66,6 +67,9 @@
   <button type="button" onclick="document.location='page2.html'" style="text-align:right">next</button>
 </body>
 <footer>
-<p><i><center>©wesley 2023</center></i></p>
+  <center>
+    <p><i>©wesley 2023</i></p>
+  </center>
+</footer>
 
 </html>
