--- a/sample bello/page2.html
+++ b/sample bello/page2.html
@@ -71,7 +71,7 @@
 	<p> patience is when you're supposed to be mad, but you choose to understand</p>
 	<p> if you want to make everyone happy, don't be a leader- sell ice cream</p>
 	<p> you can't win in life if you are losing in your mind</p>
-	<p> teh fact that you aren't where you want to be should be enough motivation</p>
+	<p> the fact that you aren't where you want to be should be enough motivation</p>
 	<p> hard time will always reveal true friends</p>
 	<p> better to fight for something than live for nothing</p>
 	<p> take risk: if you win, you will be happy; if you lose, you will be wise</p>
