adding header for questing some names

--- a/sample bello/sample2/sample1.html
+++ b/sample bello/sample2/sample1.html
@@ -12,6 +12,7 @@
     <div id="id"></div>
     <p id="demo"> Hello</p>
     <button type="button" id="testing" onclick="function()">Click me!</button><br><br>
+    <h1>What's your name?</h1>
     <input id="lem" type="text">
     <button type="button" onclick="validateform()">Submit</button>
     <p id="lim"></p>
