--- a/sample bello/sample1/sample_bello.html
+++ b/sample bello/sample1/sample_bello.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="sample.css">
   <a id="home"></a>
 <h1><center>Curiculum Vitae</center></h1>
 
 </head>
-<body style ="background-image: url('future.png');background-repeat: no-repeat;background-attachment:fixed;background-size:cover">
+<body>
 
   <a href="#ABOUTME">About Me</a><br>
   <a href="#education">Educational Background</a><br />
   <a href="#Hobbies">Hobbies</a><br />
   <a href="#certificates">Certificates</a><br />
   <a href="#skills">Skills</a><br />
-  <button type ="button"onclick ="document.location='page2.html'" style="button-align:right">next page</button><br>
+  <button type="button" onclick="document.location='page2.html'">next</button>
   <br>
 
-  <a id="ABOUTME"><h1 style ="color:white;background-color:black">ABOUT ME</h1></a>
-  <img src="pfp.JPG" alt="pfp" style="float:right;border-radius:100%;width:200px;padding-right:px"><br>
+  <a id="ABOUTME"><h1>ABOUT ME</h1></a>
+  <img class="break" src="pfp.JPG" alt="pfp"><br>
   
   <p>NAME: Dan Wesley Bello</p>
   <p>BIRTHDAY: June 23 2003</p>
@@ -25,7 +26,7 @@
     <a href="#home">back</a><br>
   <br>
   <br>
-  <a id="education"><h1 style ="color:white;background-color:black">EDUCATIONAL BACKGROUND</h1></a>
+  <a id="education"><h1>EDUCATIONAL BACKGROUND</h1></a>
   <h3>Elementary: </h3>
   <p>Colegio de San Pascaul Baylon</p>
   <p>Riveridge School.inc</p>
@@ -39,7 +40,7 @@
   <a href="#home">back</a><br />
   <br>
   <br>
-  <a id="Hobbies"><h1 style ="color:white;background-color:black">HOBBIES</h1></a>
+  <a id="Hobbies"><h1>HOBBIES</h1></a>
   <p>Playing video games</p>
   <p>linux configuration</p>
   <p>watching anime</p>
@@ -47,25 +48,25 @@
   <a href="#home">back</a><br>
   <br>
   <br>
-  <a id="certificates"><h1 style ="color:white;background-color:black">CERTIFICATES AND TRAINING</h1></a>
+  <a id="certificates"><h1>CERTIFICATES AND TRAINING</h1></a>
   <p>Introduction to linux</p>
   <p>Introduction to cybersecurity</p>
   <p>Redcross youth</p>
   <p>CAT Merit</p>
-  <img src="linux.png" alt="Linux cert" style="width:600px" >
-  <img src="cybersec.png" alt="cybersec-cert" style="width:600px"><br>
+  <img src="linux.png" alt="Linux cert">
+  <img src="cybersec.png" alt="cybersec-cert"><br>
   <a href="#home">back</a>
   <br>
   <br>
   <br>
-  <a id="skills"><h1 style ="color:white;background-color:black">Skills</h1></a>
+  <a id="skills"><h1>Skills</h1></a>
   <p>Electrican skills</p>
   <p>Software management</p>
   <p>Linux server management</p>
   <p>Server management</p>
   <p>computer troubleshooting</p>
   <a href="#home">back</a><br><br>
-  <button type="button" onclick="document.location='page2.html'" style="text-align:right">next</button>
+  <button>next</button>
 </body>
 <footer>
   <center>
