--- a/sample bello/sample2/sample1.html
+++ b/sample bello/sample2/sample1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="wesley.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="firefox">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sample1</title>
 </head>
 <body>
     <script src="index.js "></script>
@@ -16,5 +17,7 @@
     <input id="lem" type="text">
     <button type="button" onclick="validateform()">Submit</button>
     <p id="lim"></p>
+
+    <h1> <center> love </center></h1>
 </body>
 </html>
