--- a/sample bello/sample1/sample_bello.html
+++ b/sample bello/sample1/sample_bello.html
@@ -13,7 +13,7 @@
   <a href="#Hobbies">Hobbies</a><br />
   <a href="#certificates">Certificates</a><br />
   <a href="#skills">Skills</a><br />
-  <button type="button" onclick="document.location='page2.html'">next</button>
+  <button type="button" onclick="document.location='page2.html'"><span>next</span></button>
   <br>
 
   <a id="ABOUTME"><h1>ABOUT ME</h1></a>
@@ -49,12 +49,23 @@
   <br>
   <br>
   <a id="certificates"><h1>CERTIFICATES AND TRAINING</h1></a>
+  <div class="gallery">
+    <a target="_blank" href="linux.png">
+      <img src="linux.png" alt="linux certification" width="600" height="400">
+    </a>
+    <div class="desc">Linux Certification</div>
+  </div>
+  <div class="gallery">
+    <a target="_blank" href="cybersec.png">
+      <img src="cybersec.png" alt="Cybersecurity Certification" width="600" height="400">
+    </a>
+    <div class="desc">Cybersecurity Certification</div>
+  </div>
   <p>Introduction to linux</p>
   <p>Introduction to cybersecurity</p>
   <p>Redcross youth</p>
   <p>CAT Merit</p>
-  <img src="linux.png" alt="Linux cert">
-  <img src="cybersec.png" alt="cybersec-cert"><br>
+  
   <a href="#home">back</a>
   <br>
   <br>
@@ -66,7 +77,7 @@
   <p>Server management</p>
   <p>computer troubleshooting</p>
   <a href="#home">back</a><br><br>
-  <button>next</button>
+  <button type="button" onclick="document.location='page2.html'">next</button>
 </body>
 <footer>
   <center>
