improving css sheets

--- a/sample bello/sample1/sample_bello.html
+++ b/sample bello/sample1/sample_bello.html
@@ -7,12 +7,13 @@
 
 </head>
 <body>
-
-  <a href="#ABOUTME">About Me</a><br>
-  <a href="#education">Educational Background</a><br />
-  <a href="#Hobbies">Hobbies</a><br />
-  <a href="#certificates">Certificates</a><br />
-  <a href="#skills">Skills</a><br />
+  <ul>
+    <li><a href="#ABOUTME">About Me</a></li>
+    <li><a href="#education">Educational Background</a></li>
+    <li><a href="#Hobbies">Hobbies</a></li>
+    <li><a href="#certificates">Certificates</a></li>
+    <li><a href="#skills">Skills</a></li>
+  </ul>
   <button type="button" onclick="document.location='page2.html'"><span>next</span></button>
   <br>
 
@@ -37,7 +38,7 @@
   <h3>College</h3>
   <p>STI Caloocan</p>
   <p>Our Lady Of fatima University</p>
-  <a href="#home">back</a><br />
+  <a href="#home">back</a>
   <br>
   <br>
   <a id="Hobbies"><h1>HOBBIES</h1></a>
