--- a/sample bello/sample1/page2.html
+++ b/sample bello/sample1/page2.html
@@ -1,85 +1,123 @@
 <!DOCTYPE html>
+<head>
+	<link rel="stylesheet" type="text/css" href="page2.css">
 <title>
 	page 2
 </title>
-<body style="background-image: url('future.png');background-repeat: no-repeat;background-attachment:fixed;background-size:cover">
-	<button type="button" onclick="document.location='sample_bello.html'" align="right">back page</button>
+</head>
+<body>
+	<button type="button" onclick="document.location='sample_bello.html'"><span>back </span>page</button>
 	<center>
 	<h1>My SlamBook</h1>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Favorite color</h1>
-	<p> my favorite color is color blue</p>	
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I want to try but never to do it</h1>
-	<p> archery</p>
-	<p> mountain climbing</p>
-	<p> paragliding</p>
-	<p> cliff jumping</p>
-	<p> bunjee jumping</p>
-	<p> sky diving</p>
-	<p> gun shooting</p>
-	<p> apply for marksmanship training</p>
-	<p> apply for marine</p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I am confident of</h1>
-	<p> linux configuration and trouble shooting </p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Places that I have been drived </h1>
-	<p> donya remedios trinidad</p>
-	<p> malolos</p>
-	<p> calumpit</p>
-	<p> san fernando pampangga</p>
-	<p> makati</p>
-	<p> manila</p>
-	<p> laguna</p>
-	<p> pasay</p>
-	<p> san miguel</p>
-	<p> valenzuela</p>
-	<p> marilao</p>
-	<p> obando</p>
-	<p> bocaue </p>
 
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Favorite food and dish</h1>
-	<p> adobo</p>
-	<p> fried chicken </p>
-	<p> pizza </p>
-	<p> tocino</p>
-	<p> roasted chicken</p>
-	<p> spicy chicken</p>
-	<p> chicken and pork asado</p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things that I am scared of</h1>
-	<p> Dissapointment</p>
-	<p> cockroach </p>
-	<p> ghosts</p>
-	<p> torture</p>
-	<p> decapitation</p>
-	<p> dead body with fresh blood and open wounds </p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Things I hate</h1>
-	<p> working </p>
-	<p> crowded people </p>
-	<p> too much noise </p>
-	<p> people sticking around me </p>
-	<p> annoying people </p>
-	<p> sensitive people </p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Do you have pets?</h1>
-	<p> yes, cats and dogs </p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Advice in life</h1>
-	<p> stay true to yourself </p>
-	<p> do what you love not what you're told to love </p>
-	<br>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Quotes in life</h1>
-	<p> nothing is true everything is permitted</p>
-	<p> we work in the dark to serve th light</p>
-	<p> you can't win in life if you are losing in your mind</p>
-	<p> if it scares you it's a sign that you should do it</p>
-	<p> patience is when you're supposed to be mad, but you choose to understand</p>
-	<p> if you want to make everyone happy, don't be a leader- sell ice cream</p>
-	<p> you can't win in life if you are losing in your mind</p>
-	<p> the fact that you aren't where you want to be should be enough motivation</p>
-	<p> hard time will always reveal true friends</p>
-	<p> better to fight for something than live for nothing</p>
-	<p> take risk: if you win, you will be happy; if you lose, you will be wise</p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Describe yourself in three words</h1>
-	<p> enthusiastic </p>
-	<p> passionate </p>
-	<p> patient </p>
-	<h1 style="color:white;background-color:black;padding-left:5px;padding-right:5px;display:inline-block;border-radius:60px">Who has inspired you the most</h1>
+	<div class="one">
+		<h1 >Favorite color</h1>
+		<p> my favorite color is color blue</p>	
+	</div>
+
+	<div class="two">
+		<h1>Things that I want to try but never to do it</h1>
+		<p> archery</p>
+		<p> mountain climbing</p>
+		<p> paragliding</p>
+		<p> cliff jumping</p>
+		<p> bunjee jumping</p>
+		<p> sky diving</p>
+		<p> gun shooting</p>
+		<p> apply for marksmanship training</p>
+		<p> apply for marine</p>
+	</div>
+
+	<div class="three">
+	<h1 >Things that I am confident of</h1>
+	<p> linux configuration and trouble shooting </p>
+	</div>
+
+	<div class="three">
+		<h1 >Places that I have been drived </h1>
+		<p> donya remedios trinidad</p>
+		<p> malolos</p>
+		<p> calumpit</p>
+		<p> san fernando pampangga</p>
+		<p> makati</p>
+		<p> manila</p>
+		<p> laguna</p>
+		<p> pasay</p>
+		<p> san miguel</p>
+		<p> valenzuela</p>
+		<p> marilao</p>
+		<p> obando</p>
+		<p> bocaue </p>
+	</div>
+
+	<div class="four">
+		<h1 >Favorite food and dish</h1>
+		<p> adobo</p>
+		<p> fried chicken </p>
+		<p> pizza </p>
+		<p> tocino</p>
+		<p> roasted chicken</p>
+		<p> spicy chicken</p>
+		<p> chicken and pork asado</p>
+	</div>
+
+	<div class="five">
+		<h1 >Things that I am scared of</h1>
+		<p> Dissapointment</p>
+		<p> cockroach </p>
+		<p> ghosts</p>
+		<p> torture</p>
+		<p> decapitation</p>
+		<p> dead body with fresh blood and open wounds </p>
+	</div>
+
+	<div class="six">
+		<h1 >Things I hate</h1>
+		<p> working </p>
+		<p> crowded people </p>
+		<p> too much noise </p>
+		<p> people sticking around me </p>
+		<p> annoying people </p>
+		<p> sensitive people </p>
+	</div>
+
+	<div class="seven">
+		<h1 >Do you have pets?</h1>
+		<p> yes, cats and dogs </p>
+	</div>
+
+	<div class="eight">
+		<h1 >Advice in life</h1>
+		<p> stay true to yourself </p>
+		<p> do what you love not what you're told to love </p>
+	</div>
+	
+	<div class="nine">
+		<h1 >Quotes in life</h1>
+		<p> nothing is true everything is permitted</p>
+		<p> we work in the dark to serve th light</p>
+		<p> you can't win in life if you are losing in your mind</p>
+		<p> if it scares you it's a sign that you should do it</p>
+		<p> patience is when you're supposed to be mad, but you choose to understand</p>
+		<p> if you want to make everyone happy, don't be a leader- sell ice cream</p>
+		<p> you can't win in life if you are losing in your mind</p>
+		<p> the fact that you aren't where you want to be should be enough motivation</p>
+		<p> hard time will always reveal true friends</p>
+		<p> better to fight for something than live for nothing</p>
+		<p> take risk: if you win, you will be happy; if you lose, you will be wise</p>
+		
+	</div>
+
+	<div class="ten">
+		<h1 >Describe yourself in three words</h1>
+		<p> enthusiastic </p>
+		<p> passionate </p>
+		<p> patient </p>
+	</div>
+	
+	<div class="eleven">
+	<h1 >Who has inspired you the most</h1>
 	<p> love ones </p><br> <br>
+	</div>
 </body>
 </html>
