adding <span> on the bottom button

--- a/sample bello/sample1/sample_bello.html
+++ b/sample bello/sample1/sample_bello.html
@@ -78,7 +78,7 @@
   <p>Server management</p>
   <p>computer troubleshooting</p>
   <a href="#home">back</a><br><br>
-  <button type="button" onclick="document.location='page2.html'">next</button>
+  <button type="button" onclick="document.location='page2.html'"><span>next</span></button>
 </body>
 <footer>
   <center>
