--- a/sample bello/sample1/page2.html
+++ b/sample bello/sample1/page2.html
@@ -6,118 +6,129 @@
 </title>
 </head>
 <body>
-	<button type="button" onclick="document.location='sample_bello.html'"><span>back </span>page</button>
 	<center>
 	<h1>My SlamBook</h1>
-
+	</center>
+	<button type="button" onclick="document.location='sample_bello.html'"><span>back </span>page</button>
+	<center>
 	<div class="one">
 		<h1 >Favorite color</h1>
-		<p> my favorite color is color blue</p>	
+		<li> my favorite color is color blue</li>	
 	</div>
 
 	<div class="two">
 		<h1>Things that I want to try but never to do it</h1>
-		<p> archery</p>
-		<p> mountain climbing</p>
-		<p> paragliding</p>
-		<p> cliff jumping</p>
-		<p> bunjee jumping</p>
-		<p> sky diving</p>
-		<p> gun shooting</p>
-		<p> apply for marksmanship training</p>
-		<p> apply for marine</p>
+		<li> archery</li>
+		<li> mountain climbing</li>
+		<li> paragliding</li>
+		<li> cliff jumping</li>
+		<li> bunjee jumping</li>
+		<li> sky diving</li>
+		<li> gun shooting</li>
+		<li> apply for marksmanship training</li>
+		<li> apply for marine</li>
 	</div>
 
 	<div class="three">
 	<h1 >Things that I am confident of</h1>
-	<p> linux configuration and trouble shooting </p>
+	<li> linux configuration and trouble shooting </li>
 	</div>
 
 	<div class="three">
 		<h1 >Places that I have been drived </h1>
-		<p> donya remedios trinidad</p>
-		<p> malolos</p>
-		<p> calumpit</p>
-		<p> san fernando pampangga</p>
-		<p> makati</p>
-		<p> manila</p>
-		<p> laguna</p>
-		<p> pasay</p>
-		<p> san miguel</p>
-		<p> valenzuela</p>
-		<p> marilao</p>
-		<p> obando</p>
-		<p> bocaue </p>
+		<li> Donya remedios trinidad</li>
+		<li> Malolos</li>
+		<li> Calumpit</li>
+		<li> San fernando pampangga</li>
+		<li> Makati</li>
+		<li> Manila</li>
+		<li> Laguna</li>
+		<li> Pasay</li>
+		<li> San miguel</li>
+		<li> Valenzuela</li>
+		<li> Marilao</li>
+		<li> obando</li>
+		<li> bocaue </li>
 	</div>
 
 	<div class="four">
 		<h1 >Favorite food and dish</h1>
-		<p> adobo</p>
-		<p> fried chicken </p>
-		<p> pizza </p>
-		<p> tocino</p>
-		<p> roasted chicken</p>
-		<p> spicy chicken</p>
-		<p> chicken and pork asado</p>
+		<li> adobo</li>
+		<li> fried chicken </li>
+		<li> pizza </li>
+		<li> tocino</li>
+		<li> roasted chicken</li>
+		<li> spicy chicken</li>
+		<li> chicken and pork asado</li>
 	</div>
 
 	<div class="five">
 		<h1 >Things that I am scared of</h1>
-		<p> Dissapointment</p>
-		<p> cockroach </p>
-		<p> ghosts</p>
-		<p> torture</p>
-		<p> decapitation</p>
-		<p> dead body with fresh blood and open wounds </p>
+		<li> Dissapointment</li>
+		<li> cockroach </li>
+		<li> ghosts</li>
+		<li> torture</li>
+		<li> decapitation</li>
+		<li> dead body with fresh blood and open wounds </li>
 	</div>
-
 	<div class="six">
-		<h1 >Things I hate</h1>
-		<p> working </p>
-		<p> crowded people </p>
-		<p> too much noise </p>
-		<p> people sticking around me </p>
-		<p> annoying people </p>
-		<p> sensitive people </p>
+		<h1>Things I like</h1>
+		<li> food </li>
+		<li> pussy</li>
+		<li> sex</li>
+		<li> vaping</li>
+		<li> mela</li>
 	</div>
 
 	<div class="seven">
-		<h1 >Do you have pets?</h1>
-		<p> yes, cats and dogs </p>
+		<h1 >Things I hate</h1>
+		<li> Working </li>
+		<li> Crowded people </li>
+		<li> Too much noise </li>
+		<li> People sticking around me </li>
+		<li> Annoying people </li>
+		<li> Sensitive people </li>
+		<li> Irrational People</li>
 	</div>
 
 	<div class="eight">
+		<h1 >Do you have pets?</h1>
+		<li> Yes, 6cats </li>
+	</div>
+
+	<div class="nine">
 		<h1 >Advice in life</h1>
-		<p> stay true to yourself </p>
-		<p> do what you love not what you're told to love </p>
+		<li> stay true to yourself </li>
+		<li> do what you love not what you're told to love </li>
 	</div>
 	
-	<div class="nine">
+	<div class="ten">
 		<h1 >Quotes in life</h1>
-		<p> nothing is true everything is permitted</p>
-		<p> we work in the dark to serve th light</p>
-		<p> you can't win in life if you are losing in your mind</p>
-		<p> if it scares you it's a sign that you should do it</p>
-		<p> patience is when you're supposed to be mad, but you choose to understand</p>
-		<p> if you want to make everyone happy, don't be a leader- sell ice cream</p>
-		<p> you can't win in life if you are losing in your mind</p>
-		<p> the fact that you aren't where you want to be should be enough motivation</p>
-		<p> hard time will always reveal true friends</p>
-		<p> better to fight for something than live for nothing</p>
-		<p> take risk: if you win, you will be happy; if you lose, you will be wise</p>
+		<li> nothing is true everything is permitted</li>
+		<li> we work in the dark to serve th light</li>
+		<li> you can't win in life if you are losing in your mind</li>
+		<li> if it scares you it's a sign that you should do it</li>
+		<li> patience is when you're supposed to be mad, but you choose to understand</li>
+		<li> if you want to make everyone happy, don't be a leader- sell ice cream</li>
+		<li> you can't win in life if you are losing in your mind</li>
+		<li> the fact that you aren't where you want to be should be enough motivation</li>
+		<li> hard time will always reveal true friends</li>
+		<li> better to fight for something than live for nothing</li>
+		<li> take risk: if you win, you will be happy; if you lose, you will be wise</li>
 		
 	</div>
 
-	<div class="ten">
+	<div class="eleven">
 		<h1 >Describe yourself in three words</h1>
-		<p> enthusiastic </p>
-		<p> passionate </p>
-		<p> patient </p>
+		<li> enthusiastic </li>
+		<li> passionate </li>
+		<li> patient </li>
 	</div>
 	
-	<div class="eleven">
+	<div class="twelve">
 	<h1 >Who has inspired you the most</h1>
-	<p> love ones </p><br> <br>
+	<li> love ones </li><br> <br>
 	</div>
+	</center>
 </body>
 </html>
