--- a/sample bello/sample1/sample_bello.html
+++ b/sample bello/sample1/sample_bello.html
@@ -14,7 +14,7 @@
     <li><a href="#certificates">Certificates</a></li>
     <li><a href="#skills">Skills</a></li>
   </ul>
-  <button type="button" onclick="document.location='page2.html'"><span>next</span></button>
+  <button type="button" onclick="document.location='page2.html'"><span>Next</span></button>
   <br>
 
   <a id="ABOUTME"><h1>ABOUT ME</h1></a>
@@ -24,7 +24,7 @@
   <p>BIRTHDAY: June 23 2003</p>
   <p>AGE: 19</p>
   <p>ADDRESS: San Pascual Obando Bulacan</p>
-    <a href="#home">back</a><br>
+    <a href="#home">Back</a><br>
   <br>
   <br>
   <a id="education"><h1>EDUCATIONAL BACKGROUND</h1></a>
@@ -35,18 +35,18 @@
   <p>San Diego Parochial School</p>
   <h3>Junior Highschool </h3>
   <p>Manila Central University</p>
-  <h3>College</h3>
+  <h3>College</h3> 
   <p>STI Caloocan</p>
   <p>Our Lady Of fatima University</p>
-  <a href="#home">back</a>
+  <a href="#home">Back</a>
   <br>
   <br>
   <a id="Hobbies"><h1>HOBBIES</h1></a>
   <p>Playing video games</p>
-  <p>linux configuration</p>
-  <p>watching anime</p>
-  <p>playing sportsgame</p>
-  <a href="#home">back</a><br>
+  <p>Linux configuration</p>
+  <p>Watching anime</p>
+  <p>Playing sportsgame</p>
+  <a href="#home">Back</a><br>
   <br>
   <br>
   <a id="certificates"><h1>CERTIFICATES AND TRAINING</h1></a>
@@ -67,7 +67,7 @@
   <p>Redcross youth</p>
   <p>CAT Merit</p>
   
-  <a href="#home">back</a>
+  <a href="#home">Back</a>
   <br>
   <br>
   <br>
@@ -76,13 +76,13 @@
   <p>Software management</p>
   <p>Linux server management</p>
   <p>Server management</p>
-  <p>computer troubleshooting</p>
-  <a href="#home">back</a><br><br>
-  <button type="button" onclick="document.location='page2.html'"><span>next</span></button>
+  <p>Computer troubleshooting</p>
+  <a href="#home">Back</a><br><br>
+  <button type="button" onclick="document.location='page2.html'"><span>Next</span></button>
 </body>
 <footer>
   <center>
-    <p><i>©wesley 2023</i></p>
+    <p><i>Wesley Bello</i></p>
   </center>
 </footer>
 
